--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -139,6 +139,8 @@
         android:backgroundTint="@color/card_blue_bg"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:tabSelectedTextColor="@color/white"
+        app:tabIndicatorColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/cardView">
 
         <com.google.android.material.tabs.TabItem
